--- a/src/components/Carrousel2.astro
+++ b/src/components/Carrousel2.astro
@@ -32,6 +32,7 @@ const images = [
     >
         {
             images.map((image, index) => (
+            <div class="flex flex-col items-center">
                 <img
                     src={image.src}
                     alt={image.alt}
@@ -39,6 +40,9 @@ const images = [
                     data-src={image.src}
                     data-alt={image.alt}
                 />
+                <p class="mt-2 font-bold text-white">Jocelyn Flores</p>
+                <p class="text-sm text-lime-500">Project Manager</p>
+              </div>
             ))
         }
     </div>
