--- a/src/components/Carrousel3.astro
+++ b/src/components/Carrousel3.astro
@@ -32,13 +32,17 @@ const images = [
     >
         {
             images.map((image, index) => (
-                <img
-                    src={image.src}
-                    alt={image.alt}
-                    class="w-auto max-h-48 object-cover rounded-md hover-effect cursor-pointer"
-                    data-src={image.src}
-                    data-alt={image.alt}
-                />
+                <div class="flex flex-col items-center">
+                    <img
+                        src={image.src}
+                        alt={image.alt}
+                        class="w-auto max-h-48 object-cover rounded-md hover-effect cursor-pointer"
+                        data-src={image.src}
+                        data-alt={image.alt}
+                    />
+                    <p class="mt-2 font-bold text-white">Will Smith</p>
+                    <p class="text-sm text-lime-500">Adam</p>
+                </div>
             ))
         }
     </div>
