se arreglan rutas, falta llenarlas - se quito contenido de page creators details

--- a/src/pages/festivals.astro
+++ b/src/pages/festivals.astro
@@ -1,14 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Pruebas from '../components/pruebas.astro'
-import Aditional from '../components/Aditional.astro';
-import Production from '../components/Production.astro';
-import Cast from '../components/Cast.astro';
 ---
 
 <Layout>
-    <Pruebas />
-	<Aditional />
-	<Production />
-	<Cast />
+  <div class="container mx-auto text-center mt-36 mb-5">
+    pagina festivals
+  </div>
 </Layout>
