--- a/src/components/DetailScreen.astro
+++ b/src/components/DetailScreen.astro
@@ -1,8 +1,8 @@
 <div class="bg-slate-600 h-screen" slot="detailScreen">
-    <div class="relative h-4/6 min-w-screen bg-[url('../src/assets/bg-ARIADNE.jpg')] opacity-95 shadow-inner shadow-slate-600">
-        <div class="text-white bottom-10 absolute ml-28">
-            <h3 class="text-lime-400 uppercase text-4xl">ariadne</h3>
-            <div class="my-5 text-xl">
+    <div class="relative h-2/3 lg:h-4/6 min-w-screen bg-[url('../src/assets/bg-ARIADNE.jpg')] bg-cover bg-top opacity-95 shadow-inner shadow-slate-600">
+        <div class="text-white bottom-10 absolute ml-10 lg:ml-28">
+            <h3 class="text-lime-400 uppercase text-2xl lg:text-4xl">ariadne</h3>
+            <div class="my-2 lg:my-5 text-sm lg:text-xl">
                 <p>Ariadne</p>
                 <p>Dirigida por: Adrian Rodriguez</p>
                 <p>Genero(s): Drama, Romance</p>
@@ -28,7 +28,7 @@
             </button>
         </div>
     </div>
-    <div class="text-white h-2/6 py-8 px-28 overflow-y-auto max-h-full text-justify">
+    <div class="text-white h-1/3 lg:h-2/6 py-8 px-10 lg:px-28 overflow-y-auto max-h-full text-justify">
         La Larga Espera es una conmovedora historia sobre el poder de la
         esperanza y la resiliencia humana, ambientada en un pequeño pueblo
         costero. La película sigue a Isabel, una joven madre que, tras la
