actualizacion de colores, responsividad en paginas e implementacion de carrucel automatizado en pantalla de cinema

--- a/src/components/Aditional.astro
+++ b/src/components/Aditional.astro
@@ -2,10 +2,10 @@
 import Carrousel from "./Carrousel.astro"
 ---
 
-<div class="bg-slate-800 px-10 py-6">
+<div class="bg-principal px-10 py-6">
     <div class="text-2xl">
       <h1 class="text-lime-400 font-tittle text-5xl">Material</h1>
-      <h1 class="text-slate-400 uppercase font-extrabold ml-16 -mt-3 text-4xl">Adicional</h1>
+      <h1 class="text-slate-400 uppercase font-extrabold ml-10 lg:ml-16 text-xl lg:text-4xl -mt-3">Adicional</h1>
     </div>
 
     <Carrousel />
