--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ import PrivacyAdvise from "../pages/PrivacyAdvise.astro";
 
 <!-- <footer class="bg-gray-700 text-gray-300 py-4 bottom-0 w-full shadow-xl fixed botomm-0"> -->
 <footer
-  class="bg-gray-700 text-gray-300 py-4 bottom-0 w-full shadow-xl lg:text-base text-xs flex flex-col justify-center"
+  class="bg-secundario text-gray-300 py-4 bottom-0 w-full shadow-xl lg:text-base text-xs flex flex-col justify-center"
 >
   <div class="mx-auto flex">
     <div class="lg:ml-3">
