--- a/src/pages/cinema.astro
+++ b/src/pages/cinema.astro
@@ -1,9 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import HomeCinema from '../components/homeCinema.astro';
 ---
 
 <Layout>
-  <div class="container mx-auto text-center mt-36 mb-5">
-    pagina cinema
-  </div>
+  <HomeCinema />
 </Layout>
