--- a/src/components/CreatorsDetails.astro
+++ b/src/components/CreatorsDetails.astro
@@ -2,36 +2,32 @@
 import AlanCreador from "../assets/AlanCastañeda-CREADORES.png";
 ---
 
-<div class="bg-slate-800 min-h-screen pl-10">
-  <div class="text-2xl pt-36">
-    <h1 class="text-lime-400 font-tittle text-6xl md:text-7xl">Conoce</h1>
+<div class="bg-principal min-h-screen w-full px-8 flex flex-col justify-center items-center py-36">
+  <div class="text-2xl w-full">
+    <h1 class="text-lime-400 font-tittle text-5xl sm:text-6xl md:text-7xl">Conoce</h1>
     <h1
-      class="text-slate-400 uppercase font-extrabold ml-16 -mt-3 text-5xl md:text-6xl"
+      class="text-slate-400 uppercase font-extrabold ml-8 sm:ml-16 -mt-3 text-4xl sm:text-5xl md:text-6xl"
     >
       A los creadores
     </h1>
   </div>
-  <div class="flex flex-wrap mt-16 justify-center">
+  <div class="flex flex-wrap mt-16 justify-center sm:justify-start">
     <img
       src={AlanCreador.src}
       alt="Alan Castaneda CREADORES"
-      class="w-auto h-auto object-cover rounded-md hover-effect max-w-xs md:max-w-sm"
+      class="w-full max-w-xs sm:max-w-sm h-auto object-cover rounded-md"
     />
-    <div class="flex flex-col ml-28">
-      <p class="text-lime-400 uppercase text-3xl md:text-4xl">Alan Castañeda</p>
-      <div class="mt-8">
-        <p class="text-slate-400 text-lg md:text-xl">País de origen: México</p>
-        <p class="text-slate-400 text-lg md:text-xl">
-          País de residencia: México
-        </p>
-        <p class="text-slate-400 text-lg md:text-xl">
-          Fecha de nacimiento: 15/noviembre/2000
-        </p>
-        <p class="text-slate-400 text-lg md:text-xl">Nacionalidad: mexicano</p>
-        <p class="text-slate-400 text-lg md:text-xl">
+    <div class="flex flex-col mt-8 sm:mt-0 sm:ml-8">
+      <p class="text-lime-400 uppercase text-2xl sm:text-3xl md:text-4xl">Alan Castañeda</p>
+      <div class="mt-4 sm:mt-8">
+        <p class="text-slate-400 text-base sm:text-lg md:text-xl">País de origen: México</p>
+        <p class="text-slate-400 text-base sm:text-lg md:text-xl">País de residencia: México</p>
+        <p class="text-slate-400 text-base sm:text-lg md:text-xl">Fecha de nacimiento: 15/noviembre/2000</p>
+        <p class="text-slate-400 text-base sm:text-lg md:text-xl">Nacionalidad: mexicano</p>
+        <p class="text-slate-400 text-base sm:text-lg md:text-xl">
           Correo electrónico: alancastaneda151515@gmail.com
         </p>
-        <p class="text-slate-400 text-lg md:text-xl">
+        <p class="text-slate-400 text-base sm:text-lg md:text-xl">
           Facebook: <a
             href="https://www.facebook.com/AlanMCastaneda"
             target="_blank"
@@ -39,7 +35,7 @@ import AlanCreador from "../assets/AlanCastañeda-CREADORES.png";
             >https://www.facebook.com/AlanMCastaneda</a
           >
         </p>
-        <p class="text-slate-400 text-lg md:text-xl">
+        <p class="text-slate-400 text-base sm:text-lg md:text-xl">
           Instagram: <a
             href="https://www.instagram.com/alancastaneda15/"
             target="_blank"
@@ -47,7 +43,7 @@ import AlanCreador from "../assets/AlanCastañeda-CREADORES.png";
             >https://www.instagram.com/alancastaneda15/</a
           >
         </p>
-        <p class="text-slate-400 text-lg md:text-xl">
+        <p class="text-slate-400 text-base sm:text-lg md:text-xl">
           TikTok: <a
             href="https://www.tiktok.com/@alancastaneda15"
             target="_blank"
@@ -55,8 +51,8 @@ import AlanCreador from "../assets/AlanCastañeda-CREADORES.png";
             >https://www.tiktok.com/@alancastaneda15</a
           >
         </p>
-        <p class="text-slate-400 text-lg md:text-xl">Twitter: ---</p>
-        <p class="text-slate-400 text-lg md:text-xl">
+        <p class="text-slate-400 text-base sm:text-lg md:text-xl">Twitter: ---</p>
+        <p class="text-slate-400 text-base sm:text-lg md:text-xl">
           LinkedIn: <a
             href="https://www.linkedin.com/in/alancastaneda/"
             target="_blank"
@@ -67,9 +63,9 @@ import AlanCreador from "../assets/AlanCastañeda-CREADORES.png";
       </div>
     </div>
   </div>
-  <div class="py-6 px-28">
-    <p class="text-lime-400 uppercase text-3xl md:text-4xl">Reseña</p>
-    <p class="text-slate-400 text-lg md:text-xl">
+  <div class="py-6 sm:px-8">
+    <p class="text-lime-400 uppercase text-2xl sm:text-3xl md:text-4xl">Reseña</p>
+    <p class="text-slate-400 text-base sm:text-lg md:text-xl">
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa
       accusantium quibusdam, esse nihil, consequuntur, tempora totam ducimus eum
       porro alias voluptates temporibus officiis autem. Non, perferendis omnis.
@@ -83,9 +79,9 @@ import AlanCreador from "../assets/AlanCastañeda-CREADORES.png";
       obcaecati iste, modi unde corporis quo enim dignissimos?
     </p>
   </div>
-  <div class="py-6 px-28">
-    <p class="text-lime-400 uppercase text-3xl md:text-4xl">Estudios</p>
-    <p class="text-slate-400 text-lg md:text-xl">
+  <div class="py-6 sm:px-8">
+    <p class="text-lime-400 uppercase text-2xl sm:text-3xl md:text-4xl">Estudios</p>
+    <p class="text-slate-400 text-base sm:text-lg md:text-xl">
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa
       accusantium quibusdam, esse nihil, consequuntur, tempora totam ducimus eum
       porro alias voluptates temporibus officiis autem. Non, perferendis omnis.
