--- a/src/components/DetailScreen.astro
+++ b/src/components/DetailScreen.astro
@@ -1,4 +1,4 @@
-<div class="bg-slate-600 h-screen" slot="detailScreen">
+<div class="bg-secundario h-screen" slot="detailScreen">
     <div class="relative h-2/3 lg:h-4/6 min-w-screen bg-[url('../src/assets/bg-ARIADNE.jpg')] bg-cover bg-top opacity-95 shadow-inner shadow-slate-600">
         <div class="text-white bottom-10 absolute ml-10 lg:ml-28">
             <h3 class="text-lime-400 uppercase text-2xl lg:text-4xl">ariadne</h3>
