--- a/src/pages/creators.astro
+++ b/src/pages/creators.astro
@@ -1,8 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import CreatorsDetails from '../components/CreatorsDetails.astro'
+import Aditional from '../components/Aditional.astro';
 ---
 
 <Layout>
 	<CreatorsDetails />
+	<Aditional />
+	<Aditional />
+	<Aditional />
 </Layout>
