--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -46,7 +46,7 @@ onMount(() => {
   <div class="mx-auto flex justify-between items-center px-4 md:px-8">
     <!-- Logo -->
     <div class="flex items-center">
-      <a href="/cinema">
+      <a href="/">
         <Image src={WahuDark2020} alt="Wahu Logo" class="h-10 w-auto" />
       </a>
     </div>
@@ -63,9 +63,9 @@ onMount(() => {
 
     <!-- Desktop Menu -->
     <div class="hidden md:flex space-x-4 ml-20">
-      <a href="/" class="nav-link hover:text-gray-300 text-gray-400">ARIADNE</a>
+      <a href="/details" class="nav-link hover:text-gray-300 text-gray-400">ARIADNE</a>
       <a href="/creators" class="nav-link hover:text-gray-300 text-gray-400">CREADORES</a>
-      <a href="/cinema" class="nav-link hover:text-gray-300 text-gray-400">Cinema</a>
+      <a href="/" class="nav-link hover:text-gray-300 text-gray-400">Cinema</a>
       <a href="/festivals" class="nav-link hover:text-gray-300 text-gray-400">Festivales</a>
       <a href="/academy" class="nav-link hover:text-gray-300 text-gray-400">Academia</a>
       <a href="/tv" class="nav-link hover:text-gray-300 text-gray-400">TV</a>
@@ -91,7 +91,7 @@ onMount(() => {
   <!-- Mobile Menu -->
   <div
     id="mobile-menu"
-    class="hidden fixed top-16 left-0 w-full bg-gray-700 md:hidden"
+    class="hidden fixed top-16 left-0 w-full bg-secundario md:hidden"
   >
     <div class="flex flex-col space-y-2 py-4 px-4 justify-center items-center">
       <a href="/" class="nav-link hover:text-gray-300 text-gray-400">ARIADNE</a>
