--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import DetailScreen from '../components/DetailScreen.astro'
+import HomeCinema from '../components/homeCinema.astro';
 import Aditional from '../components/Aditional.astro';
-import Production from '../components/Production.astro';
-import Cast from '../components/Cast.astro';
 ---
 
 <Layout>
-	<DetailScreen />
-	<Aditional />
-	<Production />
-	<Cast />
+  <HomeCinema />
+  <Aditional />
+  <Aditional />
+  <Aditional />
 </Layout>
