actualizacion en navbar responsive

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -56,18 +56,30 @@ onMount(() => {
       id="mobile-menu-button"
       class="md:hidden flex flex-col justify-center items-center w-8 h-8 text-gray-400 hover:text-white focus:outline-none"
     >
-      <span class="block w-6 h-0.5 bg-current transition-transform duration-300"></span>
-      <span class="block w-6 h-0.5 bg-current my-1 transition-opacity duration-300"></span>
-      <span class="block w-6 h-0.5 bg-current transition-transform duration-300"></span>
+      <span class="block w-6 h-0.5 bg-current transition-transform duration-300"
+      ></span>
+      <span
+        class="block w-6 h-0.5 bg-current my-1 transition-opacity duration-300"
+      ></span>
+      <span class="block w-6 h-0.5 bg-current transition-transform duration-300"
+      ></span>
     </button>
 
     <!-- Desktop Menu -->
     <div class="hidden md:flex space-x-4 ml-20">
-      <a href="/details" class="nav-link hover:text-gray-300 text-gray-400">ARIADNE</a>
-      <a href="/creators" class="nav-link hover:text-gray-300 text-gray-400">CREADORES</a>
+      <a href="/details" class="nav-link hover:text-gray-300 text-gray-400"
+        >ARIADNE</a
+      >
+      <a href="/creators" class="nav-link hover:text-gray-300 text-gray-400"
+        >CREADORES</a
+      >
       <a href="/" class="nav-link hover:text-gray-300 text-gray-400">Cinema</a>
-      <a href="/festivals" class="nav-link hover:text-gray-300 text-gray-400">Festivales</a>
-      <a href="/academy" class="nav-link hover:text-gray-300 text-gray-400">Academia</a>
+      <a href="/festivals" class="nav-link hover:text-gray-300 text-gray-400"
+        >Festivales</a
+      >
+      <a href="/academy" class="nav-link hover:text-gray-300 text-gray-400"
+        >Academia</a
+      >
       <a href="/tv" class="nav-link hover:text-gray-300 text-gray-400">TV</a>
     </div>
 
@@ -94,11 +106,19 @@ onMount(() => {
     class="hidden fixed top-16 left-0 w-full bg-secundario md:hidden"
   >
     <div class="flex flex-col space-y-2 py-4 px-4 justify-center items-center">
-      <a href="/" class="nav-link hover:text-gray-300 text-gray-400">ARIADNE</a>
-      <a href="/creators" class="nav-link hover:text-gray-300 text-gray-400">CREADORES</a>
-      <a href="/cinema" class="nav-link hover:text-gray-300 text-gray-400">Cinema</a>
-      <a href="/festivals" class="nav-link hover:text-gray-300 text-gray-400">Festivales</a>
-      <a href="/academy" class="nav-link hover:text-gray-300 text-gray-400">Academia</a>
+      <a href="/details" class="nav-link hover:text-gray-300 text-gray-400"
+        >ARIADNE</a
+      >
+      <a href="/creators" class="nav-link hover:text-gray-300 text-gray-400"
+        >CREADORES</a
+      >
+      <a href="/" class="nav-link hover:text-gray-300 text-gray-400">Cinema</a>
+      <a href="/festivals" class="nav-link hover:text-gray-300 text-gray-400"
+        >Festivales</a
+      >
+      <a href="/academy" class="nav-link hover:text-gray-300 text-gray-400"
+        >Academia</a
+      >
       <a href="/tv" class="nav-link hover:text-gray-300 text-gray-400">TV</a>
       <hr class="border-gray-600 w-full my-2" />
       <button
